feat: реализованы базовые метрики и юнит-тесты к ним